--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon server.js",
-    "start":"node server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.2.4"
   }
 }
